--- a/postgre_db/docker-compose.yml
+++ b/postgre_db/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "/storage/project_dataset/taxi_postgre_db:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
+    networks:
+      - pg-network
   pgadmin:
     image: dpage/pgadmin4
     environment:
@@ -16,3 +18,7 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - "8081:80"
+    networks:
+      - pg-network
+networks:
+  pg-network:
